examples/sample-03/03-ingress-app1.0.0-ok.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: app
spec:
  rules:
    - http:
        paths:
          - path: /gc-kubernetes-demo
            backend:
              serviceName: app
              servicePort: 8000
